k3s/sample/ingress-argocd-nginx.yml
---
# Ingress 설정
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.itapi.org # Argo CD에 접근할 도메인 이름을 설정합니다.
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
#  tls:
#  - hosts:
#    - argocd.example.com
#    secretName: argocd-tls # TLS 인증서를 저장한 Secret 이름을 설정합니다.
