k3s/sample/ingress-argocd-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  ingressClassName: "traefik" # 여기서 ingressClassName 필드를 사용합니다.
  rules:
    - host: argocd.itapi.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
#  tls:
#    - hosts:
#        - argocd.itapi.org
#      secretName: argocd-tls-secret
